@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2017-11-26
+  Fixed missing child group issue, caused by previous work (special thanks to Logan Bluth)
+  
+
 2017-11-15
   Introduced concept of "infinite repeats" in groups, for courses with an excessive
   amount of repeats allowed.  This greaty helps speed up FlightPath's group logic when
